Fix T97527: multiview camera suffix not working with more than 4 characters

Thanks to Germano Cavalcante for finding the solution.